made python script to auto create release directories and cp the binary to the folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # DONT COPY YOUR BUILD BECAUSE THIS DIRECTORY IS DEVICE SPECIFIC
-build
+build-*
 
 # DONT PUSH ANY .zip FILES TO GITHUB TO KEEP CLEAN REPO
 /templates/*.h
